Even higher cache size